feat: complete part 2
Added button to start and restart game.

Added a property to the Game class for keeping track of when the game is
over.

Most of the changes for handleClick(evt) is from indentation.  Only one
line was added in the beginning, which was a check for when the game is
over.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 </head>
 <body>
 
-<div id="game">
-  <table id="board"></table>
-</div>
+  <button id="buttonStart" type="button" autofocus>Start</button>
 
-<script src="connect4.js"></script>
+  <div id="game">
+    <table id="board"></table>
+  </div>
+
+  <script src="connect4.js"></script>
 
 </body>
 </html>
