feat: complete part 3
Added Player class and replaced currPlayer reference with a Player
object.  Also, the piece colors are now set inline during piece
creation, which was the only best way to set the colors.

Added an HTML form to get player names and colors.

Removed obsolete CSS piece colors.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
 </head>
 <body>
 
-  <button id="buttonStart" type="button" autofocus>Start</button>
+  <div id="setup">
+    <form>
+      <label for="p1name">Player 1: </label>
+      <br />
+      <input id="p1name" type="text" />
+      <input id="p1color" type="color" value="#ff0000" />
+      <br />
+      <label for="p2name">Player 2: </label>
+      <br />
+      <input id="p2name" type="text" />
+      <input id="p2color" type="color" value="#0000ff" />
+    </form>
+    <button id="buttonStart" type="button" autofocus>Start</button>
+  </div>
 
   <div id="game">
     <table id="board"></table>
