fix: add checks for player inputs and add defaults
Added default values for player names.

Added checks for empty Strings for player names and colors when
starting a new game.

Moved the code for the callback function of the event listener for the
start button into a new handleStart function, because it was getting
too long.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <form>
       <label for="p1name">Player 1: </label>
       <br />
-      <input id="p1name" type="text" />
+      <input id="p1name" type="text" value="1" />
       <input id="p1color" type="color" value="#ff0000" />
       <br />
       <label for="p2name">Player 2: </label>
       <br />
-      <input id="p2name" type="text" />
+      <input id="p2name" type="text" value="2" />
       <input id="p2color" type="color" value="#0000ff" />
     </form>
     <button id="buttonStart" type="button" autofocus>Start</button>
